<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_dialog_top">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="Choose"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:src="@drawable/close" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_all"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/all_candiates"
            android:textAlignment="center"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/txt_new"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/job_board"
            android:textAlignment="center"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/txt_interview"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/agency"
            android:textAlignment="center"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/txt_hired"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/future_potential"
            android:textAlignment="center"
            android:textSize="17sp" />
        <TextView
            android:id="@+id/txt_referral"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/referral"
            android:textAlignment="center"
            android:textSize="17sp" />
        <TextView
            android:id="@+id/txt_career"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/career"
            android:textAlignment="center"
            android:textSize="17sp" />
        <TextView
            android:id="@+id/txt_employee"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/employee"
            android:textAlignment="center"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>






