<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dailog"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_dialog_top">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/team_notification"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />
        <ImageView
            android:id="@+id/close"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:src="@drawable/close" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/curverdrawable"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="HR Manager"
            android:layout_gravity="center"
            android:textColor="@color/textdarkgray"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/txt_15"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/send_task"
                android:textColor="@color/txt_color"
                android:textSize="@dimen/txt_12"
                android:layout_marginRight="20dp"/>
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:id="@+id/radio_button"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/yes" />
                <RadioButton android:id="@+id/radio_no"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/no" />
            </RadioGroup>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/send_to"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_14"
                android:textStyle="bold"
                android:layout_marginRight="20dp"/>
            <TextView
                android:id="@+id/txv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginRight="20dp"/>
            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spiner_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="20dp"
                android:dropDownVerticalOffset="20dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/txv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/txt_10"
            android:layout_marginRight="@dimen/txt_10"
            android:text="Completed By: Default: 10days"
            android:gravity="center"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textSize="@dimen/txt_13" />
        <com.htmleditor.HtmlTextEditor
            android:id="@+id/html_editor"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_height="300dp" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_bottom">

        <TextView
            android:id="@+id/txv_update"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="text"
            android:text="@string/update"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />
    </RelativeLayout>


</LinearLayout>