<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dailog"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_dialog_top">

        <TextView
            android:id="@+id/txttitletext"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/add_note"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:src="@drawable/close" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/curverdrawable"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_outline_black"
            android:orientation="vertical"
            android:padding="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/txt_10"
                android:layout_marginRight="@dimen/txt_10"
                android:text="@string/skill_label"
                android:textColor="@color/black" />
            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner_skill"
                android:layout_width="match_parent"
                android:layout_margin="2dp"
                android:background="@drawable/btn_outline_black"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/hiringmangerlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_outline_black"
            android:orientation="vertical"
            android:padding="5dp">
            <TextView
                android:id="@+id/txtsubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/txt_10"
                android:layout_marginRight="@dimen/txt_10"
                android:text="@string/quicknote"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/notes_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notes_title"
                android:background="@android:color/transparent"
                android:gravity="top|left"
                android:hint="Enter Quick Note"
                android:inputType="textCapSentences|textMultiLine|textAutoCorrect"
                android:lines="3"
                android:maxLength="500"
                android:padding="9dp"
                android:textColor="@color/black"
                android:textStyle="normal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_outline_black"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/txt_10"
                android:layout_marginRight="@dimen/txt_10"
                android:text="@string/score"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/edit_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="top|left"
                android:hint="Enter Score"
                android:inputType="numberDecimal"
                android:lines="3"
                android:maxLength="500"
                android:padding="9dp"
                android:textColor="@color/black"
                android:textStyle="normal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_outline_black"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/txt_10"
                android:layout_marginRight="@dimen/txt_10"
                android:text="@string/color"
                android:textColor="@color/black" />
            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner_color"
                android:layout_width="match_parent"
                android:layout_margin="2dp"
                android:background="@drawable/btn_outline_black"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_bottom">

        <TextView
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="@color/white" />

    </RelativeLayout>

</LinearLayout>






