<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lyt_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/txt_10"
        android:layout_marginRight="@dimen/txt_10"
        android:layout_marginBottom="@dimen/txt_10"
        android:background="@drawable/jobs_bg"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/txt_10"
            android:buttonTint="@color/colorPrimary"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/txt_10"
            android:layout_marginBottom="@dimen/txt_10"
            android:background="@drawable/jobs_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/txt_10"
                android:layout_marginRight="@dimen/txt_15"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/txv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:singleLine="true"
                    android:text="HR Manager"
                    android:textColor="@color/textdarkgray"
                    android:textSize="@dimen/txt_15"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complete_in"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_12" />
                <EditText
                    android:id="@+id/edt_date"
                    android:layout_width="80dp"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:textSize="13sp"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:background="@drawable/bg_white_black1"
                    android:hint="@string/enter_date" />
                <TextView
                    android:id="@+id/txv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/days_due"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_12" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>